Fix Styles Sidebar

--- a/src/views/frontend/LoginArtesa/src/App.css
+++ b/src/views/frontend/LoginArtesa/src/App.css
@@ -386,6 +386,7 @@ img, video {
   color: var(--white);
 }
 .sidebar .sidebar-menu ul li button .menu-text {
+  display: none;
   margin-left: 10px;
   white-space: nowrap;
   color: var(--white); /* Asegurar color blanco para el texto */
