--- a/src/views/frontend/LoginArtesa/src/App.scss
+++ b/src/views/frontend/LoginArtesa/src/App.scss
@@ -484,6 +484,7 @@ img, video {
           }
           
           .menu-text {
+            display: none;
             margin-left: 10px;
             white-space: nowrap;
             color: var(--white); /* Asegurar color blanco para el texto */
