--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.css
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/TopSection/top.css
@@ -1,15 +1,15 @@
 .top-section {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 0; /* Asegura que comienza desde la izquierda completa */
+  width: 100%; /* Asegura ancho completo */
   height: 60px;
   background-color: #2c3e50;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 .top-section h1 {
@@ -38,7 +38,7 @@
   top: 40px;
   right: 0;
   background-color: #34495e;
-  box-shadow: 0px 4px 8px var(--primary-color);
+  box-shadow: 0 4px 8px var(--primary-color);
   border-radius: 5px;
   overflow: hidden;
   display: flex;
